# deyes

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  E2E_PLATFORM_SYNC_CHECKLIST.md  README.md  docker-compose.yaml
backend/: .dockerignore  .env.example  Dockerfile  PHASE1_WORKFLOW_INTEGRATION.md  PHASE2_P2_TEXT_OVERLAY.md  PHASE2_P3_COMFYUI_REGENERATION.md  PHASE2_P3_IMPLEMENTATION_SUMMARY.md  PYTRENDS_TESTING.md  README.md  alembic.ini  pyproject.toml  test_demand_validator_simple.py  validate_helium10_integration.py  validate_helium10_structure.py  validate_stage5_batch1.py
backend/app/: main.py
backend/docs/: API.md
backend/migrations/: 001_phase1_content_platform.sql  002_recommendation_feedback.sql  003_auto_action_engine.sql  004_add_idempotency.sql  env.py
backend/tests/: conftest.py  test_ab_test_manager_agent.py  test_ab_test_workflow.py  test_action_engine_service.py  test_agent_step_runner.py  test_alibaba_1688_adapter.py  test_alibaba_1688_adapter_observability.py  test_alibaba_1688_adapter_tmapi.py  test_alphashop_1688_adapter.py  test_alphashop_client.py  test_anomaly_detection_service.py  test_asset_derivation_service.py  test_asset_performance_service.py  test_auto_action_engine.py  test_auto_action_engine_variant_integration.py  test_browser_pool.py  test_browsing_service.py  test_candidate_conversion_service.py  test_competition_risk.py  test_content_asset_extensions.py  test_content_asset_manager_platform_assets.py  test_currency_converter.py  test_currency_converter_integration.py  test_demand_discovery_service.py  test_demand_first_flow_e2e.py  (+75 more)
(+313 files in other folders)
